[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/guns/17.png" type="Texture" id=1]
[ext_resource path="res://weapons/dual_pistols.gd" type="Script" id=2]

[node name="DualPistols" type="Node2D"]
script = ExtResource( 2 )
is_flippable = false

[node name="Texture1" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Texture2" type="Sprite" parent="."]
position = Vector2( -55, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
flip_h = true

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="SpawnPosition1" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="SpawnPosition2" type="Position2D" parent="."]
position = Vector2( -65, 0 )

[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
